namespace GeoModeler3D.Core.Entities;

public enum ConicSectionType
{
    Circle,
    Ellipse,
    Parabola,
    Hyperbola
}
